--- a/css/file_drag.css
+++ b/css/file_drag.css
@@ -155,6 +155,7 @@ select{
     font-size: 20px;
     overflow: scroll;
     max-height: 550px;
+    cursor: pointer;
 }
 .download-container{
     border-left: 2px dotted #555;
